update the code for newer gradle/intellij/plugin apply some java 21 quick changes to make the code shorter refactored the trafficLight and the action on save to prevent exceptions and deadlock